web-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-deployment
spec:
  strategy:
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      name: web
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
      - image: gcr.io/nambrotdotcom/nambrotdotcom-app:latest
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
        name: web
        ports:
        - containerPort: 3000
          name: http-server
