web-nambrotdotcom-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - nambrot.com
    - www.nambrot.com
    - meetingrooms.nambrot.com
    secretName: echoserver-tls
  rules:
  - host: nambrot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
  - host: www.nambrot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
  - host: meetingrooms.nambrot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
